[package]
name = "ros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[profile.dev]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]

[package.metadata.bootimage]
run-command = ["\\msys64\\ucrt64\\bin\\qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio"]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false


